--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-qrcode": "^0.3.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-plugin-vuex": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
