--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client:lint": "cd client && npx vue-cli-service lint",
     "server:watch": "tsc -w -p tsconfig.json",
     "server:build": "tsc -p tsconfig.json",
-    "server:start": "nodemon ./build/index.js",
+    "server:start": "cross-env DEBUG=server:* nodemon ./build/index.js",
     "pm2": "sudo pm2 start ./build/index.js --name qrgen.cc"
   },
   "author": "Maximilian Schiller",
@@ -20,13 +20,16 @@
   "homepage": "https://qrgen.cc",
   "license": "MIT",
   "dependencies": {
+    "@dotvirus/yxc": "0.0.6",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.21.2",
     "mongoose": "^5.9.2",
+    "morgan": "^1.10.0",
     "nanoid": "^2.1.11",
     "request": "^2.88.2",
     "request-ip": "^2.1.3",
@@ -37,11 +40,14 @@
     "@babel/node": "^7.8.7",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/express-rate-limit": "^5.0.0",
     "@types/helmet": "0.0.47",
     "@types/mongoose": "^5.7.16",
+    "@types/morgan": "^1.9.0",
     "@types/nanoid": "^2.1.0",
+    "cross-env": "^7.0.2",
     "nodemon": "^2.0.3"
   }
 }
