--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client:build": "cd client && npx vue-cli-service build",
     "client:lint": "cd client && npx vue-cli-service lint",
     "server:test": "ava tests/**/*.spec.ts --verbose",
+    "server:cover": "./node_modules/.bin/nyc npm run server:test",
     "server:dev": "./node_modules/.bin/tsc-watch --onSuccess \"sudo DEBUG=server:* nodemon ./build/index.js\"",
     "server:watch": "tsc -w -p tsconfig.json",
     "server:build": "tsc -p tsconfig.json",
@@ -57,6 +58,7 @@
     "cross-env": "^7.0.2",
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.3",
+    "nyc": "^15.1.0",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
     "tsc-watch": "^4.2.8",
@@ -71,5 +73,8 @@
       "ts-node/register",
       "tsconfig-paths/register"
     ]
+  },
+  "nyc": {
+    "reporter": [ "lcov", "text", "html" ]
   }
 }
