--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ node_js:
     - "stable"
 install: npm install
 script:
-    - "npm run server:test"
-    - "npm run server:coverage"
+    - "npm run test"
+    - "npm run coverage"
