--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,4 @@ language: node_js
 node_js: 
     - "stable"
 install: npm install
-script:
-    - "npm run test"
-    - "npm run coverage"
+after_success: npm run coverage
