--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/mongoose": "^5.7.16",
     "@types/morgan": "^1.9.0",
     "@types/nanoid": "^2.1.0",
+    "@types/node": "^14.11.2",
     "@types/supertest": "^2.0.9",
     "ava": "^3.9.0",
     "coveralls": "^3.1.0",
