--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrgen",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "QrGen.cc is a free service that lets you create QR-Codes and shortened URLs from any link quickly and easily",
   "main": "build/index.js",
   "scripts": {
@@ -39,6 +39,7 @@
     "nanoid": "^2.1.11",
     "request": "^2.88.2",
     "request-ip": "^2.1.3",
+    "running-at": "^0.3.4",
     "url-exists-deep": "^2.0.6"
   },
   "devDependencies": {
