--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrgen",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "description": "QrGen.cc is a free service that lets you create QR-Codes and shortened URLs from any link quickly and easily",
   "main": "build/index.js",
   "scripts": {
@@ -9,13 +9,13 @@
     "client:lint": "cd client && npx vue-cli-service lint",
     "test": "nyc --reporter=html --reporter=text ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "server:dev": "./node_modules/.bin/tsc-watch --onSuccess \"sudo DEBUG=server:* nodemon ./build/index.js\"",
+    "server:dev": "./node_modules/.bin/tsc-watch --onSuccess \"nodemon ./build/index.js\"",
     "server:watch": "tsc -w -p tsconfig.json",
     "server:build": "tsc -p tsconfig.json",
     "server:start": "cross-env DEBUG=server:* nodemon ./build/index.js",
     "pm2": "sudo pm2 start ./build/index.js --name qrgen.cc"
   },
-  "author": "Maximilian Schiller",
+  "author": "Maximilian Schiller <schiller@mxis.ch>",
   "repository": {
     "type": "git",
     "url": "https://github.com/BetaHuhn/qrgen.git"
@@ -31,15 +31,17 @@
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.21.2",
+    "metadata-scraper": "^0.1.1",
     "mongoose": "^5.9.2",
-    "morgan": "^1.10.0",
     "nanoid": "^2.1.11",
     "request": "^2.88.2",
     "request-ip": "^2.1.3",
     "running-at": "^0.3.4",
+    "signale": "^1.4.0",
     "url-exists-deep": "^2.0.6"
   },
   "devDependencies": {
@@ -48,13 +50,14 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
+    "@types/ejs": "^3.0.5",
     "@types/express": "^4.17.6",
     "@types/express-rate-limit": "^5.0.0",
     "@types/helmet": "0.0.47",
     "@types/mongoose": "^5.7.16",
-    "@types/morgan": "^1.9.0",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^14.11.2",
+    "@types/signale": "^1.4.1",
     "@types/supertest": "^2.0.9",
     "ava": "^3.9.0",
     "coveralls": "^3.1.0",
