--- a/.github/workflows/test-server.yml
+++ b/.github/workflows/test-server.yml
@@ -2,9 +2,9 @@ name: Build Server
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
   test:
