--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,4 +1,4 @@
-name: Test Server
+name: Test and build Server
 
 on:
   push:
@@ -7,6 +7,16 @@ on:
     branches: [ master, develop ]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip-build]')"
+    steps:
+      - uses: actions/checkout@v2
+      - uses: c-hive/gha-npm-cache@v1
+      - name: Install server dependencies
+        run: npm ci
+      - name: Build Server
+        run: npm run server:build
   test:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip-build]')"
