--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "client:serve": "cd client && npx vue-cli-service serve",
     "client:build": "cd client && npx vue-cli-service build",
     "client:lint": "cd client && npx vue-cli-service lint",
-    "test": "nyc --reporter=html --reporter=text ava --verbose",
-    "coverage": "nyc --reporter=lcov ava",
     "server:dev": "./node_modules/.bin/tsc-watch --onSuccess \"nodemon ./build/index.js\"",
     "server:watch": "tsc -w -p tsconfig.json",
     "server:build": "tsc -p tsconfig.json",
     "server:start": "cross-env DEBUG=server:* nodemon ./build/index.js",
+    "lint": "eslint ./src/ --ext .ts",
+    "test": "nyc --reporter=html --reporter=text ava --verbose",
+    "coverage": "nyc --reporter=lcov ava",
     "pm2": "sudo pm2 start ./build/index.js --name qrgen.cc"
   },
   "author": "Maximilian Schiller <schiller@mxis.ch>",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
+    "@betahuhn/eslint-config-node": "^0.1.1",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
@@ -59,9 +61,12 @@
     "@types/node": "^14.11.2",
     "@types/signale": "^1.4.1",
     "@types/supertest": "^2.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "ava": "^3.9.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
+    "eslint": "^7.13.0",
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.1.0",
