--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@betahuhn/eslint-config-node": "^0.1.1",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-pwa": "^4.3.1",
@@ -27,22 +28,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {
-      "no-useless-escape": "off"
-    }
   },
   "browserslist": [
     "> 1%",
