--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,4 +1,4 @@
-name: Build Client
+name: Client
 
 on:
   push:
@@ -13,9 +13,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-npm-cache@v1
-      - name: Install client dependencies
+      - name: Install dependencies
         working-directory: ./client
         run: npm ci
       - name: Build Vue.js App
         working-directory: ./client
         run: npm run build
+  lint:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip-build]')"
+    steps:
+      - uses: actions/checkout@v2
+      - uses: c-hive/gha-npm-cache@v1
+      - name: Install dependencies
+        working-directory: ./client
+        run: npm ci
+      - name: Run eslint
+        working-directory: ./client
+        run: npm run lint
