Add start, build and lint command for backend and frontend

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -40,4 +40,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run eslint
-        run: npm run lint
+        run: npm run server:lint
