--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "client:build": "cd client && npx vue-cli-service build",
     "client:lint": "cd client && npx vue-cli-service lint",
     "server:dev": "./node_modules/.bin/tsc-watch --onSuccess \"nodemon ./build/index.js\"",
-    "server:watch": "tsc -w -p tsconfig.json",
     "server:build": "tsc -p tsconfig.json",
-    "server:start": "cross-env DEBUG=server:* nodemon ./build/index.js",
-    "lint": "eslint ./src/ --ext .ts",
+    "server:lint": "eslint ./src/ --ext .ts",
+    "dependencies": "npm install && cd client && npm install",
+    "build": "npm run server:build && npm run client:build",
+    "start": "node ./build/index.js",
+    "lint": "npm run server:lint && npm run client:lint",
     "test": "nyc --reporter=html --reporter=text ava --verbose",
     "coverage": "nyc --reporter=lcov ava",
     "pm2": "sudo pm2 start ./build/index.js --name qrgen.cc"
