--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -17,8 +17,7 @@ jobs:
         working-directory: ./client
         run: npm ci
       - name: Build Vue.js App
-        working-directory: ./client
-        run: npm run build
+        run: npm run client:build
   lint:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip-build]')"
@@ -29,5 +28,4 @@ jobs:
         working-directory: ./client
         run: npm ci
       - name: Run eslint
-        working-directory: ./client
-        run: npm run lint
+        run: npm run client:lint
