--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,11 +1,5 @@
 name: Server
-
-on:
-  push:
-    branches: [ master, develop ]
-  pull_request:
-    branches: [ master, develop ]
-
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
