--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,15 +1,19 @@
 name: Client
 on:
   push:
+    branches-ignore:
+      - master
     paths:
       - 'client/*'
   pull_request:
+    branches-ignore:
+      - master
     paths:
       - 'client/*'
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip-build]')"
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-npm-cache@v1
@@ -21,7 +25,7 @@ jobs:
         run: npm run build
   lint:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip-build]')"
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-npm-cache@v1
