--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
-    "@betahuhn/eslint-config-node": "^0.1.1",
+    "@betahuhn/config": "^1.0.2",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
