➕ Add semantic-release dependencies

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "npm run server:lint && npm run client:lint",
     "test": "nyc --reporter=html --reporter=text ava --verbose",
     "coverage": "nyc --reporter=lcov ava",
+    "semantic-release": "semantic-release",
     "pm2": "sudo pm2 start ./build/index.js --name qrgen.cc"
   },
   "author": "Maximilian Schiller <schiller@mxis.ch>",
@@ -50,6 +51,10 @@
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@betahuhn/config": "^1.0.2",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.9",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
@@ -69,6 +74,8 @@
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.1.0",
+    "semantic-release": "^17.3.1",
+    "semantic-release-gitmoji": "^1.3.4",
     "supertest": "^6.0.1",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.8",
