--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "exclude": [
     "node_modules/",
-    "tests/"
+    "tests/",
+    "src/ui/"
   ],
   "compilerOptions": {
     /* Basic Options */
