--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -4,12 +4,12 @@ on:
     branches-ignore:
       - master
     paths:
-      - 'client/*'
+      - 'build/ui/*'
   pull_request:
     branches-ignore:
       - master
     paths:
-      - 'client/*'
+      - 'build/ui/*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,11 +18,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-npm-cache@v1
       - name: Install dependencies
-        working-directory: ./client
         run: npm ci
       - name: Build Vue.js App
-        working-directory: ./client
-        run: npm run build
+        run: npm run client:build
   lint:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
@@ -30,8 +28,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-npm-cache@v1
       - name: Install dependencies
-        working-directory: ./client
         run: npm ci
       - name: Run eslint
-        working-directory: ./client
-        run: npm run lint
+        run: npm run client:lint
